--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/commercialiseo
+#mongo docker
+#MONGO_URI=mongodb://mongodb:27017/commercialiseo
 JWT_SECRET=9fA7$kL3@QmR2Z!xE8D!C0VwPp6YJt5H%4sB^Ue1
 EMAIL_USER=ccl.cnaps@gmail.com
 EMAIL_PASS=pjlh qxth wpbo iexo
